Version 4.02 (?? February 2013)
  * Fixed error in the prediction intervals returned by forecast.ets() when simulation was used and a Box-Cox transformation was specified.

Version 4.01 (22 January 2013)
  * Error now trapped when newxreg variables not passed to forecast.lm()
  * Corrected help file for dshw() to remove references to prediction intervals.
  * Improved help file for dm.test() to give more information about the alternative hypotheses.
  * Improved dm.test() performance for small samples by using a t-distribution instead of normal.
  * Modified bats() and tbats() examples to follow CRAN policies on parallel processing.
  * Moved some packages from Depends to Imports.
  * Added getResponse() function to return the historical time series from various time series model objects.
  * Modified accuracy() to use getResponse().
  * Allowed user-generated innovations in simulate.ets(), simulate.Arima(), etc.
  * Allowed xreg argument in forecast.stl() and stlf() when ARIMA model used.
  * Removed reliance on caret, and associated fitted and residuals functions.

Version 4.00 (27 November 2012)
  * More robust handling of degenerate ARIMA models.
  * New defaults for shaded colors used for prediction intervals in plots.
  * auto.arima() now remembers the name of the series when a Box-Cox transformation is used.
  * New function nnetar() for automatic neural network forecasting of time series.
  * arfima() now tries harder to ensure the ARMA part is stationary.
  * ts control added for forecast of linear models in forecast.lm().
  * Fixed bug in bats() which caused an error when use.box.cox=FALSE and use.trend=FALSE.
  * Added residuals and fitted methods for train and avNNet objects from caret package.
  * accuracy() can now figure out overlapping times for x and f.
  * rwf() now handles missing values.
  * Revised ses(), holt() and hw() so that they can optionally use traditional initialization.

Version 3.25 (11 September 2012)